<?xml version="1.0" encoding="utf-8"?>

<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
       tools:context=".MainActivity"> -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="535dp"
        android:orientation="horizontal">
		<LinearLayout
            android:id="@+id/btstatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <Button
            android:id="@+id/phoneBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phonebookstatus" 
			android:background="#8E8E8E" />
        <Button
            android:id="@+id/read1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readStatus" 
			android:background="#8E8E8E" />
        <Button
            android:id="@+id/a2dp_sink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a2dpStatus"
			android:background="#8E8E8E" />


		</LinearLayout>
	</LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

<Button
            android:id="@+id/back"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_media_previous"
            android:text="@string/back" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_media_play"
            android:text="@string/start" />

        <Button
            android:id="@+id/next"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_media_next"
            android:text="@string/next" />

        <!-- <Button -->
        <!--     android:id="@+id/next" -->
        <!--     android:layout_width="match_parent" -->
        <!--     android:layout_height="wrap_content" -->
        <!--     android:text="@string/next" /> -->

        <!-- <Button -->
        <!--     android:id="@+id/start" -->
        <!--     android:layout_width="match_parent" -->
        <!--     android:layout_height="wrap_content" -->
        <!--     android:text="@string/start" /> -->

        <!-- <Button -->
        <!--     android:id="@+id/back" -->
        <!--     android:layout_width="match_parent" -->
        <!--     android:layout_height="wrap_content" -->
        <!--     android:text="@string/back" /> -->

	</LinearLayout>





</LinearLayout>
